2015-10-28  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

	* Fix erroneous addition of referenced assets to PKLs (#723).

2015-10-19  Carl Hetherington  <cth@carlh.net>

	* Draw reels in the timeline.

	* Fix by-video-content reel split when there is stuff
	after the last piece of video content.

	* Add button to export leaf private key from the config.

2015-10-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.12 released.

2015-10-15  Carl Hetherington  <cth@carlh.net>

	* Fix out-of-range Interop subtitle timing in some cases (#717).

2015-10-14  Carl Hetherington  <cth@carlh.net>

	* Only show existing DCP channels in the audio dialog (#715).

	* Various optimizations to the upmixer filters; drop order of
	Upmixer A Lfe/C and Upmixer B Lfe filters to speed them up.

2015-10-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.11 released.

2015-10-13  Carl Hetherington  <cth@carlh.net>

	* Add basic support for multi-reel.

	* Fix referencing of multi-reel DCPs.

2015-10-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.10 released.

2015-10-12  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-10-11  Carl Hetherington  <cth@carlh.net>

	* Add option to log SMTP session transcripts
	for debugging failures to send email.

	* Version 2.4.9 released.

2015-10-11  Carl Hetherington  <cth@carlh.net>

	* Provide progress indication when finding
	subtitles (#711).

	* Updated ru_RU translation from Igor Voytovich.

	* Updated pl_PL translation from Marek Skrzelowski.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.8 released.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.7 released.

2015-10-10  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from
	Rob van Nieuwkerk.

2015-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.4.6 released.

2015-10-09  c.hetherington  <cth@carlh.net>
